--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -265,7 +265,7 @@ layout: default
             </div>
             <div class="post-tags">
                 {% for tag in post.tags %}
-                <a href="{{ '/tag/' | append: tag | relative_url }}" class="post-tag">
+                <a href="{{ '/blog/tag/' | append: tag | slugify | relative_url }}" class="post-tag">
                     {{ tag }}
                 </a>
                 {% endfor %}
