fix: fix the social links display issue

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -251,8 +251,8 @@ layout: default
         <div class="subscribe-container">
             <h2>Subscribe to My Newsletter</h2>
             <p>Get the latest posts delivered right to your inbox</p>
-            <a href="https://bingfeng.substack.com" class="subscribe-button" target="_blank" rel="noopener">
-                Subscribe to my Substack
+            <a href="https://medium.com/@bingfeng.sun/subscribe" class="subscribe-button" target="_blank" rel="noopener">
+                Subscribe to my Medium
             </a>
         </div>
     </div>
