fix: remove title from the home/blog page

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -423,8 +423,7 @@ layout: default
 
 <div class="blog-header">
     <div class="blog-header-content">
-        <h1>Blog</h1>
-        <p>Latest articles and updates</p>
+        <h1>Latest Posts</h1>
         <div class="selected-tags"></div>
         <div class="tags-cloud">
             <a href="#" class="tag-stat active" data-tag="all">
