--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -303,10 +303,9 @@ layout: default
 <body>
     <div class="hero">
         <div class="hero-content">
-            <h1>{{ site.title }}</h1>
-            <p>{{ site.description }}</p>
+            <h1>{{ site.description }}</h1>
             <div class="cta-buttons">
-                <a href="{{ '/blog' | relative_url }}" class="cta-button">Read Blog</a>
+                <a href="{{ '/blog' | relative_url }}" class="cta-button">Explore</a>
                 <a href="{{ '/about' | relative_url }}" class="cta-button">About Me</a>
             </div>
         </div>
